// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast.vue matches snapshot 1`] = `
<transition-stub>
  <div data-test="toast" class="toast">
    <div class="toast__wrapper">
      <div class="toast__content">
        <div class="toast__msg">
          <div>
            line 1
          </div>
          <div>
            line 2
          </div>
          <div>
            line 3
          </div>
        </div>
      </div>
      <div class="toast__button">
        <button-stub type="alt" size="md">
          btn text
        </button-stub>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Toast.vue should not show button 1`] = `
<transition-stub>
  <div data-test="toast" class="toast">
    <div class="toast__wrapper">
      <div class="toast__content">
        <div class="toast__msg">
          <div>
            line 1
          </div>
          <div>
            line 2
          </div>
          <div>
            line 3
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</transition-stub>
`;
